# ProyectoIntegradorPythonSSR-001

./: .gitignore  LICENSE  README.md  logitrack.db-shm  logitrack.db-wal  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: 00-fundamentos-instructions.md  00-fundamentos.md  01-widgets-instructions.md  01-widgets.md  02-layouts-instructions.md  02-layouts.md  03-eventos-async.md  04-componentes.md  05-arquitectura.md  06-datos.md  07-empaquetado.md  08-self-review.md
docs/instructions/: 03-eventos-async-instructions.md  04-componentes-instructions.md  05-arquitectura-instructions.md  06-datos-instructions.md  08-empaquetado-instructions.md  09-valida-doc-def-instructions.md
logitrack/: __init__.py  __main__.py  app.py  logger.py  paths.py
logitrack/controllers/: envio_controller.py  task_worker.py
logitrack/models/: envio.py
logitrack/services/: envio_service.py  route_api_client.py  sqlite_repository.py
logitrack/ui/: theme.py
logitrack/views/: __init__.py  components.py  main_window.py
scripts/: build.bat  build.sh  build.spec  setup  setup.bat  setup.sh
tests/: test_arquitectura.py
tests/unit/: test_arquitectura.py
